### March xx 2021, Release version 0.9.2 ###

  * ADDED:
    * a function to test postgresql server, database and tables has been added.

  * MODIFIED:
    * time series are ploted only if a connection to the database is successful.
    * the function to test postgresql server, database and tables is now connected to mainwindow, it will
    control the display of data and time series, and the work of sensors


### March 1 2021, Release version 0.9.1 ###

  * MODIFIED:
    * a solution has been found to avoid absolute path for stylesheet and images in all windows.
    * options have been transferred from dev branch to master branch.
    * a new way to compute the position of all windows has been introduced.
    * cursor on raspberry pi is now hidden from the mainwindow.
    * cursor blanking has been removed from the about window.
    * if error happens during the rendering of time series, the spinner widget is now cleared.
    * moved the option window to its own py file.
    * moved all weather windows to their own py file.
    * renamed the other windows py file.
    * scrollbar has been reintegrated in all windows.

  * FIXED:
    * fixed an issue with the option dictionary.
    * if threads are not launched at startup, it throws an error when exiting. It has been fixed.
    * new position computation has been corrected for keyboard, numpad and town windows.

  * ADDED:
    * a to do / to fix file has been added.


### February 6 2021, Release version 0.9.0 ###

  * MODIFIED:
    * all threads have been modified to handle exception logging messages.
    * changed the functions to display data to keep in memory those data and share them with other windows.
    * scrollbar style has been removed from about and option windows as arrows weren't displayed properly at this time.
    * battery and signal icons are now clickable to allow displaying new windows.
    * figures in plot section were moved a bit to fix style issues.